commit al masters del blog post mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a haer un blogpost!</h1>
-    <p>Y este es el parrafo de inicio.</p>
+   <div id="container">
+       <div id="post">
+           <h1>eSTE ES EL TITULO ATR4ACTIVO E INTERESANTE DEL POST</h1>
+           <P>Y este es el parrafo d inicio donde vamos a explorar las cosas increibles que se pueden hacer con ramas</P>
+       </div>
+   </div>
 </body>
 </html>
