Estrutura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
    <div id="container">
+       <div id="cabecera">
+           Cabecera
+       </div>
        <div id="post">
            <h1>eSTE ES EL TITULO ATR4ACTIVO E INTERESANTE DEL POST</h1>
            <P>Y este es el parrafo d inicio donde vamos a explorar las cosas increibles que se pueden hacer con ramas</P>
