--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
    <div id="container">
        <div id="cabecera">
-           Cabecera
+           Hyperblog
+           <span id="tagline">Tu blog de confianza.</span>
        </div>
        <div id="post">
            <h1>eSTE ES EL TITULO ATR4ACTIVO E INTERESANTE DEL POST</h1>
