--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
        <div id="post">
            <h1>eSTE ES EL TITULO ATR4ACTIVO E INTERESANTE DEL POST</h1>
            <P>Y este es el parrafo d inicio donde vamos a explorar las cosas increibles que se pueden hacer con ramas</P>
+           <p>Los blogs son la mejor forma de compartir información y tus ideas. Muchas mas que ir a conferencias o salir en Youtube. Excepto si eres un rosckstar. Pero estadisticamente no lo eres... por ahora.</p>
        </div>
    </div>
 </body>
