--- a/blogpost.html
+++ b/blogpost.html
@@ -11,12 +11,13 @@
    <div id="container">
        <div id="cabecera">
            Hyperblog
-           <span id="tagline">Tu blog de confianza.</span>
+           <span id="tagline">Tu blog de maestro.</span>
        </div>
        <div id="post">
            <h1>eSTE ES EL TITULO ATR4ACTIVO E INTERESANTE DEL POST</h1>
            <P>Y este es el parrafo d inicio donde vamos a explorar las cosas increibles que se pueden hacer con ramas</P>
            <p>Los blogs son la mejor forma de compartir información y tus ideas. Muchas mas que ir a conferencias o salir en Youtube. Excepto si eres un rosckstar. Pero estadisticamente no lo eres... por ahora.</p>
+           <p>Suscribete y dale like.</p>
        </div>
    </div>
 </body>
